# age-detection

./: ML.ipynb  README.md  main.ipynb  pyproject.toml
age/: ML.ipynb  training_history.csv
face/: cpu.onnx  face_prediction.ipynb  model_90.39938382927562.pt
gender/: model_head_weights_celeba_v3_1e-5.pth
