[tool.poetry]
name = "gender-detection"
version = "0.1.0"
description = ""
authors = ["KateBor <kate_boriso2002@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.2.1"
pandas = "^2.2.1"
pillow = "^10.2.0"
tqdm = "^4.66.2"
torchvision = "^0.17.1"
pyarrow = "^15.0.2"
pytest-shutil = "^1.7.0"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
clip = {git = "https://github.com/openai/CLIP.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
